[tool.poetry]
name = "app"
version = "0.1.1"
description = "Basic Portfolio Application"
authors = ["NarayanAdithya <narayanadithya1234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
bandit = "^1.7.4"
flake8-pyproject = "^1.2.2"
toml = "^0.10.2"

[tool.bandit]
exclude_dirs = [".venv","tests"]
skips = ["B104"]

[tool.flake8]
ignore = ["F401","E402"]
exclude = [".venv"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
